# Acs-CRM

./: .gitignore  README.md  commands.txt  db.sqlite3  package-lock.json  pyproject.toml  requirements.txt
apps/accounts/: admin.py  backends.py  context_processor.py  filters.py  forms.py  middleware.py  model_choices.py  models.py  password_change.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_customuser_first_login.py  0002_user_address_user_city_user_country_and_more.py  0003_user_organization.py  0004_remove_user_address_remove_user_city_and_more.py  0005_company.py  0006_user_company.py  0007_adeia.py  0008_alter_adeia_adeiatype.py  0009_training_remove_adeia_accounts_ad_created_5c15cb_idx_and_more.py  0010_alter_adeia_adeiatype.py  0011_user_job_title.py  0012_user_days_left_user_days_sum.py  0013_alter_user_is_superuser.py  0014_user_created_user_modified.py  0015_user_sex_choice.py  0016_alter_user_sex_choice.py
apps/foreas/: admin.py  filters.py  models.py  urls.py
apps/foreas/migrations/: 0001_initial.py  0002_employee.py  0004_ergasies.py
apps/organization/: admin.py  context_processor.py  delete_view.py  export.py  filters.py  forms.py  model_choices.py  models.py  resources.py  urls.py  views.py
apps/organization/migrations/: 0001_initial.py  0002_organization_users.py  0003_remove_organization_users.py  0004_alter_organization_options_and_more.py  0005_rename_organizatio_importd_6284af_idx_organizatio_importd_b2e4cb_idx_and_more.py  0006_alter_ergasies_jobtype.py  0007_application.py  0009_alter_ergasies_org_employee.py  (+23 more)
apps/pages/: context_processor.py  models.py  views.py
config/: settings.py  urls.py
foreas/: admin.py  filters.py  model_choices.py  models.py  urls.py  views.py
foreas/migrations/: 0003_alter_dhmos_address_alter_dhmos_city_and_more.py
foreas/templatetags/: custom_filters.py
pages/: urls.py
templates/: _base.html  home.html
templates/accounts/: login.html
theme/static_src/: package-lock.json  tailwind.config.js
(+22 files in other folders)
