[tool.poetry]
name = "acs-crm"
version = "0.1.0"
description = "Managing client info and tasks"
authors = ["Konstantinos Vitiniotis <kostasvit@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "5.1.4"
django-tailwind = "3.8.0"
django-extensions = "3.2.3"
django-import-export = "4.3.3"
django-filter = "24.3"
django-widget-tweaks = "1.5.0"
python-dotenv = "1.0.1"
psycopg2-binary = "2.9.10"
dj-database-url = "2.3.0"
whitenoise = "6.9.0"
gunicorn = "23.0.0"
uvicorn = "0.34.0"
arrow = "1.3.0"
asgiref = "3.8.1"
binaryornot = "0.4.4"
brotli = "1.1.0"
certifi = "2024.8.30"
chardet = "5.2.0"
charset-normalizer = "3.4.0"
click = "8.1.8"
colorama = "0.4.6"
cookiecutter = "2.6.0"
diff-match-patch = "20241021"
django-browser-reload = "1.17.0"
django-environ = "0.11.2"
h11 = "0.14.0"
idna = "3.10"
jinja2 = "3.1.4"
markdown-it-py = "3.0.0"
markupsafe = "3.0.2"
mdurl = "0.1.2"
packaging = "24.2"
psycopg = "3.2.3"
psycopg2 = "2.9.10"
pygments = "2.18.0"
python-dateutil = "2.9.0.post0"
python-slugify = "8.0.4"
pyyaml = "6.0.2"
requests = "2.32.3"
rich = "13.9.4"
six = "1.16.0"
sqlparse = "0.5.3"
tablib = "3.7.0"
text-unidecode = "1.3"
types-python-dateutil = "2.9.0.20241003"
typing-extensions = "4.12.2"
tzdata = "2024.2"
urllib3 = "2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
